form handling completed with basic styles

--- a/src/form_configuration.json
+++ b/src/form_configuration.json
@@ -8,7 +8,7 @@
             "required": true,
             "placeholder": "Fist Name",
             "label": "First Name",
-            "pattern": "^[A-Za-z]{2-25}$",
+            "pattern": "/^[A-Za-z]{2-25}$/",
             "error_message": "It should contain only letters and can be from 2 to 25 letters"
         },
         {
@@ -18,7 +18,7 @@
             "required": true,
             "placeholder": "Last Name",
             "label": "Last Name",
-            "pattern": "^[A-Za-z]{2-25}$",
+            "pattern": "/^[A-Za-z]{2-25}$/",
             "error_message": "It should contain only letters and can be from 2 to 20 letters"
         },
         {
@@ -37,7 +37,7 @@
             "required": true,
             "placeholder": "Phone Number",
             "label": "Phone Number",
-            "pattern": "^/d{10}$",
+            "pattern": "/^\\d{10}$/",
             "error_message": "It should be a valid phone number"
         }
     ]
@@ -52,7 +52,7 @@
                 "required": true,
                 "placeholder": "Father's Name",
                 "label": "Father's Name",
-                "pattern": "^[A-Za-z]{2-25}$",
+                "pattern": "/^[A-Za-z]{2-25}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -62,7 +62,7 @@
                 "required": true,
                 "placeholder": "Mother's Name",
                 "label": "Mother's Name",
-                "pattern": "^[A-Za-z]{2-25}$",
+                "pattern": "/^[A-Za-z]{2-25}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -72,7 +72,7 @@
                 "required": true,
                 "placeholder": "Country Name",
                 "label": "Country Name",
-                "pattern": "^[A-Za-z]{3,10}$",
+                "pattern": "/^[A-Za-z]{3,10}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -82,7 +82,7 @@
                 "required": true,
                 "placeholder": "State",
                 "label": "State Name",
-                "pattern": "^[A-Za-z]{2,10}$",
+                "pattern": "/^[A-Za-z]{2,10}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -92,7 +92,7 @@
                 "required": true,
                 "placeholder": "City Name",
                 "label": "City Name",
-                "pattern": "^[A-Za-z]{2,10}$",
+                "pattern": "/^[A-Za-z]{2,10}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -102,7 +102,7 @@
                 "required": true,
                 "placeholder": "House Number",
                 "label": "House Number",
-                "pattern": "^[A-Za-z]{2,10}$",
+                "pattern": "/^[A-Za-z]{2,10}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -112,7 +112,7 @@
                 "required": true,
                 "placeholder": "Lane Number",
                 "label": "Lane Number",
-                "pattern": "^[A-Za-z]{2,10}$",
+                "pattern": "/^[A-Za-z]{2,10}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -122,7 +122,7 @@
                 "required": true,
                 "placeholder": "Landmark",
                 "label": "Landmark",
-                "pattern": "^[A-Za-z]{2,10}$",
+                "pattern": "/^[A-Za-z]{2,10}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -132,7 +132,7 @@
                 "required": true,
                 "placeholder": "Pin Code",
                 "label": "Pin Code",
-                "pattern": "^/d{6}$",
+                "pattern": "/^\\d{6}$/",
                 "error_message": "It should be a valid pin code"
             }
         ]
@@ -147,7 +147,7 @@
                 "required": true,
                 "placeholder": "Department",
                 "label": "Department",
-                "pattern": "^[A-Za-z]{2,10}$",
+                "pattern": "/^[A-Za-z]{2-25}$/",
                 "error_message": "Should not contain any illegal character"
             },
             {
@@ -157,7 +157,7 @@
                 "required": true,
                 "placeholder": "Password",
                 "label": "Password",
-                "pattern": "^(?=.*[A-Za-z])(?=.*)(?=.*[@$!%*?&])[A-Za-z@$!%*?&]{3,16}$/;",
+                "pattern": "!(%3E%3D.*[A-Za-z])!(%3D.*\/d)(%3D.*[@$!%*#?&])[A-Za-z\/d@$!%*#?&]{8,}$",
                 "error_message": "Should contain be combination of latter, number and special characters"
             },
             {
